# 616

./: JarvisCore.py  Xena_Start.bat  app.py  game.py  ia_offline_asistente.code-workspace  inTER.py  lector_pdf2  llm_core.py  main.py  matrix_game.py  memory.py  pdf_reader.py  pyrightconfig.json  setup_jarvis.py  vector_memory.py  voice_input.py  voice_output.py
ia_offline_asistente/: CMakeLists.txt
ia_offline_asistente/src/: tokenizer.h
